--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">BluetoothAbsen</string>
     <string name="view_data">Lihat Peserta</string>
     <string name="view_absen">Lihat Absen</string>
+    <string name="none_paired">No devices have been paired</string>
+    <string name="none_found">No devices found</string>
 </resources>
